--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{gnosh.}}</title>
+    <title></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>{{title}}</h1>
+    {{{body}}}
   </body>
 </html>
