--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+<h1>Log In</h1>
 <form action='/users/login' method='post'>
   <ul class='errors'>
     {{#errors}}
@@ -11,6 +12,7 @@
   <label for='email'>Password</label>
   <input type='password' name='password'></input>
   <br><br>
-  <br><br><br>
   <button type='submit'>Log In</button>
 </form>
+
+<a href='/'>Home</a>
