Add item listings on main page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+.item-pic {
+  height: 200px;
+  width: 200px;
+  border-radius: 8px;
+}
+
+.listing-row {
+  margin: 2%;
+}
+
+td, th {
+  padding: 1%;
+}
