forgot to branch for admin!

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,1 +1,6 @@
 <h1>Admin</h1>
+<h4><a href="/admin/users">see all users</a></h4>
+<br>
+<h4><a href="/admin/products">see all products</a></h4>
+<br>
+<h4><a href="/admin/new">add new admin</a></h4>
