admin can edit and delete products

--- a/views/admin_products_edit.hbs
+++ b/views/admin_products_edit.hbs
@@ -11,3 +11,4 @@
     <input type="checkbox" name="active" value="true">
     <input type="submit" value="Edit">
 </form>
+<a href="/admin/products/{{data.id}}/delete">delete this product</a>
