tweaks to admin forms

--- a/views/admin_new.hbs
+++ b/views/admin_new.hbs
@@ -9,6 +9,10 @@
     <label>password</label>
     <input type="text" name="password" value="">
     <label>Admin:</label>
-    <input type="checkbox" name="admin" value="true" checked="checked">
-    <input type="submit" name="name" value="Add Admin">
+    <select class="" name="admin">
+        <option value='true'>true</option>
+        <option value='false'>false</option>
+    </select>
+    <!-- <input type="checkbox" name="admin" value="true" checked="checked"> -->
+    <input type="submit"  value="Add Admin">
 </form>
