--- a/views/admin_users_edit.hbs
+++ b/views/admin_users_edit.hbs
@@ -8,7 +8,11 @@
     <label>Email</label>
     <input type="text" name="email" value="{{data.email}}">
     <label>Admin</label>
-    <input type="checkbox" name="admin" value="">
+    <select class="" name="admin">
+        <option value='true'>true</option>
+        <option value='false'>false</option>
+    </select>
+    <!-- <input type="checkbox" name="admin" value=""> -->
     <input type="submit" value="Edit this user">
 
 </form>
