Start work on shopping cart

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,21 @@ div.container {
   margin-left: 2%;
 }
 
+
+/* Cart Dropdown */
+
+div.cart {
+  text-align: left;
+  margin-top: 5px;
+}
+
+ul.dropdown-menu > li {
+  text-align: right;
+}
+
+td.cart {
+  padding: 2% 0;
+}
 a {
   color: #00B7FF;
 }
