--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,12 +25,19 @@
           <th>Item</th>
           <th>Price</th>
         </tr>
-        {{#items}}
+        <!-- {{#items}}
         <tr>
           <td class='cart'>{{this.name}}</td>
           <td class='cart'>{{this.price}}</td>
         </tr>
-        {{/items}}
+        {{/items}} -->
+        <tr>
+          <td>--------------------</td>
+        </tr>
+        <tr>
+          <td><b>Total:</b></td>
+          <td>$total</td>
+        </tr>
       </table>
     </div>
 
@@ -48,11 +55,11 @@
   </tr>
   {{#items}}
   <tr class='listing-row'>
-    <td><img class='item-pic' src='{{this.image_url}}'></td>
-    <td class='text-center'>{{this.name}}</td>
-    <td class='text-center'>${{this.price}}</td>
+    <td><img class='item-pic cart-info' src='{{this.image_url}}'></td>
+    <td class='text-center cart-info'>{{this.name}}</td>
+    <td class='text-center cart-info'>${{this.price}}</td>
     <td class='description'>{{this.description}}</td>
-    <td><a href='#'>Add to Cart</a></td>
+    <td><a class='add-to-cart' href='#'>Add to Cart</a></td>
   </tr>
   {{/items}}
 </table>
