--- a/views/admin_new.hbs
+++ b/views/admin_new.hbs
@@ -1,4 +1,8 @@
 <h2>Add new admin</h2>
+{{#errors}}
+    {{this}}
+{{/errors}}
+
 <form action="/admin/new" method="post">
     <label>First Name</label>
     <input type="text" name="first_name" value="">
@@ -7,12 +11,13 @@
     <label>Email</label>
     <input type="text" name="email" value="">
     <label>password</label>
-    <input type="text" name="password" value="">
+    <input type="password" name="password" value="">
+    <label>confirm password</label>
+    <input type="password" name="confirm" value="">
     <label>Admin:</label>
     <select class="" name="admin">
         <option value='true'>true</option>
         <option value='false'>false</option>
     </select>
-    <!-- <input type="checkbox" name="admin" value="true" checked="checked"> -->
     <input type="submit"  value="Add Admin">
 </form>
