--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,24 +38,30 @@
   </div>
 </nav>
 
+<header>
+  <h1 class='text-center'>gnosh.</h1>
+  <h4 class='text-center'>All the snacks you need. Right to your door.</h4>
+</header>
 
-<table>
-  <tr>
-    <th>Image</th>
-    <th class='hidden'>ID</th>
-    <th class='text-center'>Name</th>
-    <th class='text-center'>Price</th>
-    <th class='text-center'>Description</th>
-    <th class='text-center'>Add to Cart</th>
-  </tr>
-  {{#items}}
-  <tr class='listing-row'>
-    <td><img class='item-pic' src='{{this.image_url}}'></td>
-    <td class='hidden'>{{this.id}}</td>
-    <td class='text-center'>{{this.name}}</td>
-    <td class='text-center'>${{this.price}}</td>
-    <td class='description hide-in-cart'>{{this.description}}</td>
-    <td class='hide-in-cart'><input class='add-to-cart' type='submit' value='Add to Cart'></td>
-  </tr>
-  {{/items}}
-</table>
+<div class='mask mask-left'>
+</div>
+  <table class='col-md-10'>
+    <tr class='listing-row'>
+      {{#items}}
+      <td class='listing'>
+        <img class='item-pic' src='{{this.image_url}}'>
+        <h2>{{this.name}}</h2>
+        <p>${{this.price}}</p>
+        <p>{{this.description}}</p>
+        <input class='add-to-cart' type='submit' value='Add to Cart'>
+      </td>
+      {{/items}}
+      <!-- <td class='hidden'>{{this.id}}</td> -->
+      <!-- <td class='text-center'>{{this.name}}</td>
+      <td class='text-center'>${{this.price}}</td>
+      <td class='description hide-in-cart'>{{this.description}}</td>
+      <td class='hide-in-cart'><input class='add-to-cart' type='submit' value='Add to Cart'></td> -->
+    </tr>
+  </table>
+<div class='mask mask-right'>
+</div>
