--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,22 +38,23 @@
   </div>
 </nav>
 
+<div class='mask mask-left'>
+</div>
+<div class='mask mask-right'>
+</div>
 
-<div class='row main-pic col-md-12'>
-  <div>
+
+<div id='conainer'>
+<div class='row main-pic'>
+  <div class='col-md-12'>
     <img class='landing' src='/images/spread.jpg'>
-    <header>
-      <h1 class='text-center'>gnosh.</h1>
-      <h4 class='text-center'>All the snacks you need. Right to your door.</h4>
-    </header>
   </div>
 </div>
 
 
-<div class='container2 row col-md-12'>
-  <div class='mask mask-left'>
-  </div>
-    <table >
+<div class='row table-div'>
+  <div class='col-md-12'>
+    <table>
       <tr class='listing-row'>
         {{#items}}
         <td class='listing'>
@@ -71,6 +72,7 @@
         <td class='hide-in-cart'><input class='add-to-cart' type='submit' value='Add to Cart'></td> -->
       </tr>
     </table>
-  <div class='mask mask-right'>
   </div>
+</div>
+
 </div>
