trying to styling on the same page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,9 +56,9 @@
     <table >
       <tr class='listing-row'>
         {{#items}}
-        // Add a slide
+        <!-- // Add a slide
         $('table').slick('slickAdd',"<div>
-        </div>
+        </div> -->
 
 
             <td class='listing'>
