--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,14 +61,11 @@
             <h2>{{this.name}}</h2>
             <p>${{this.price}}</p>
             <p>{{this.description}}</p>
-            <input class='add-to-cart' type='submit' value='Add to Cart'>
+            <form class="" action="/cart/add/{{this.id}}" method="post">
+                <input class='add-to-cart' type='submit' value='Add to Cart'>
+            </form>
           </td>
           {{/items}}
-          <!-- <td class='hidden'>{{this.id}}</td> -->
-          <!-- <td class='text-center'>{{this.name}}</td>
-          <td class='text-center'>${{this.price}}</td>
-          <td class='description hide-in-cart'>{{this.description}}</td>
-          <td class='hide-in-cart'><input class='add-to-cart' type='submit' value='Add to Cart'></td> -->
         </tr>
       </table>
     </div>
