--- a/views/admin_users_edit.hbs
+++ b/views/admin_users_edit.hbs
@@ -7,6 +7,8 @@
     <input type="text" name="last_name" value="{{data.last_name}}">
     <label>Email</label>
     <input type="text" name="email" value="{{data.email}}">
+    <label>Image URL</label>
+    <input type="text" name="image_url" value="{{data.image_url}}">
     <label>Admin</label>
     <select class="" name="admin">
         <option value='true'>true</option>
