Styling for login and signup pages

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -65,7 +65,7 @@
       <div>
         <img class='first-slide center-block' src="http://www.zillow.com/blog/files/2012/11/Knife-on-cutting-board.jpg" alt="...">
       </div>
-      <div class='text-center'>
+      <div class='text-center item-description'>
       	<h3>Check Out Our Goodies!</h3>
         <p>All the gnosh</p>
       </div>
