--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,10 +4,6 @@ body {
   width: 100%;
 }
 
-.hidden {
-  display: none;
-}
-
 /* Top Navbar */
 
 .navbar-default {
@@ -39,35 +35,10 @@ td.cart {
 }
 
 a {
-  color: #00B7FF;
+  color: #121f6e;
 }
 
-/* LISTINGS */
-
-/* Side blurring for carousel */
-/*.mask-left {
-  z-index: 100;
-  background: -moz-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-  position: fixed;
-  height: 100%;
-  width: 10%;
-  left: 0;
-}
-
-.mask-right {
-  z-index: 100;
-  background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-  position: fixed;
-  height: 100%;
-  width: 10%;
-  right: 0;
-}*/
-
-/* Landing */
+/* Main Landing */
 
 #container {
   height: 100%;
@@ -105,6 +76,8 @@ h4.header {
   top: 45%;
 }
 
+/* Listings */
+
 .item-pic {
   height: 300px;
   width: 300px;
@@ -112,7 +85,11 @@ h4.header {
   margin-bottom: 10px !important;
 }
 
-/* Carousel */
+.item-description {
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Listings Carousel */
 .carousel {
   width: 100vw;
   height: 60vh;
@@ -128,6 +105,45 @@ h4.header {
   display: block;
   padding-top: 5%;
   color: black;
+}
+
+/* Login & Signup*/
+
+img.login-background, img.signup-background {
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0;
+  z-index: -1;
+}
+
+main.login, main.signup {
+  margin: auto;
+  margin-top: 15%;
+  width: 30%;
+  background-color: rgba(228, 228, 228, 0.45);
+  border-radius: 8px;
+  text-align: center;
+}
+
+main.login > form {
+  color: black;
+}
+
+main.signup > form {
+  color: black;
+}
+
+main.login > form > label {
+  font-size: 28px;
+}
+
+h1.login, h1.signup {
+  color: white;
+  font-size: 72px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(63,44,42);
 }
 
 /* email format items */
