--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<main class='login'>
+<main class='login modal'>
   <img class='login-background' src='http://mooxidesign.com/wp-content/uploads/2015/11/vegetable-set-3.jpg'>
   <h1 class='login'>Log In</h1>
   <form class='login center-block' action='/users/login' method='post'>
