--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,7 @@
   </div>
 </nav>
 
-    
+
 <div class='row main-pic'>
 
   <div class='col-md-12'>
@@ -90,4 +90,5 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div> <!-- Carousel -->
->>>>>>> d01edf2606c87a624c59493c401bad32ef1e2bb3
+
+<button>
